--- a/src/main/site/_includes/top.html
+++ b/src/main/site/_includes/top.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Citrus Framework</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="generator" content="Citrus ${project.version}">
+  <meta name="generator" content="Citrus ${citrus.version}">
   <meta name="description" content="Citrus Framework Website"/>
   <meta name="author" content="ConSol Software GmbH"/>
   {% feed_meta %}
