--- a/src/main/site/_includes/docs_contents_mobile.html
+++ b/src/main/site/_includes/docs_contents_mobile.html
@@ -1,7 +1,7 @@
 <div class="docs-nav-mobile unit whole show-on-mobiles">
   <select onchange="if (this.value) window.location.href=this.value">
     <option value="">Navigate the docs…</option>
-    <option value="${site.path}docs/home">Home</option>
+    <option value="${site.path}/docs/home">Home</option>
     {% for section in site.data.docs %}
     <optgroup label="${site.path}{{ section.title }}">
       {% include docs_option.html items=section.docs %}
