--- a/src/main/site/_includes/news_contents.html
+++ b/src/main/site/_includes/news_contents.html
@@ -3,10 +3,10 @@
     <h4>Overview</h4>
     <ul>
       <li class="{% if page.title == 'News' %}current{% endif %}">
-        <a href="${site.path}news/">All News</a>
+        <a href="${site.path}/news/">All News</a>
       </li>
       <li class="{% if page.title == 'Releases' %}current{% endif %}">
-        <a href="${site.path}news/releases/">All Releases</a>
+        <a href="${site.path}/news/releases/">All Releases</a>
       </li>
       <li>
         <a href="http://citrus.895196.n3.nabble.com/" target="_blank">Forum</a>
@@ -20,7 +20,7 @@
       </li>
       {% endfor %}
       <li>
-        <a href="${site.path}docs/history/">History »</a>
+        <a href="${site.path}/docs/history/">History »</a>
       </li>
     </ul>
     <h4>Other News</h4>
