--- a/src/main/site/_includes/news_contents_mobile.html
+++ b/src/main/site/_includes/news_contents_mobile.html
@@ -1,7 +1,7 @@
 <div class="docs-nav-mobile unit whole show-on-mobiles">
   <select onchange="if (this.value) window.location.href=this.value">
     <option value="">Navigate the blog…</option>
-    <option value="${site.path}news/">Home</option>
+    <option value="${site.path}/news/">Home</option>
     {% for post in site.categories.blog %}
     <option value="${site.path}{{ post.url }}">{{ post.title }}</option>
     {% endfor %}
