Fixed download url

--- a/src/main/site/_includes/footer.html
+++ b/src/main/site/_includes/footer.html
@@ -8,14 +8,14 @@
     </div>
     <div class="unit one-third align-center center-on-mobiles">
       <p>
-        <img src="${site.path}/img/bmi_logo_eng.png" alt="Federal Ministry for Economic Affairs and Energy">
+        <img src="${context.path}/img/bmi_logo_eng.png" alt="Federal Ministry for Economic Affairs and Energy">
       </p>
     </div>
     <div class="unit one-third align-right center-on-mobiles">
       <p>
         Hosted by<br>
         <a href="http://www.consol.de">
-          <img src="${site.path}/img/sponsor-logo.png" alt="ConSol">
+          <img src="${context.path}/img/sponsor-logo.png" alt="ConSol">
         </a>
       </p>
       <p>&nbsp;</p>
