--- a/src/main/site/_includes/samples_contents_mobile.html
+++ b/src/main/site/_includes/samples_contents_mobile.html
@@ -1,11 +1,11 @@
 <div class="samples-nav-mobile unit whole show-on-mobiles">
   <select onchange="if (this.value) window.location.href=this.value">
     <option value="">Navigate the samples…</option>
-    <option value="${site.path}/samples/">Overview</option>
-    <option value="${site.path}/samples/todo-app/">Sample app</option>
-    <option value="${site.path}/samples/run/">Running</option>
+    <option value="${context.path}/samples/">Overview</option>
+    <option value="${context.path}/samples/todo-app/">Sample app</option>
+    <option value="${context.path}/samples/run/">Running</option>
     {% for post in site.categories.samples %}
-    <option value="${site.path}{{ post.url }}">{{ post.sample }}</option>
+    <option value="${context.path}{{ post.url }}">{{ post.sample }}</option>
     {% endfor %}
   </select>
 </div>
