--- a/src/main/site/_layouts/sample.html
+++ b/src/main/site/_layouts/sample.html
@@ -8,7 +8,7 @@ layout: samples
     <a href="{{ page.url }}" class="permalink" title="Permalink">∞</a>
   </h2>
   <div class="right">
-    <a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ page.sample }}" target="_blank">
+    <a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ page.sources }}" target="_blank">
       <i class="fa fa-pencil"></i>&nbsp;View source code
     </a>
   </div>
