--- a/src/main/site/_includes/news_contents.html
+++ b/src/main/site/_includes/news_contents.html
@@ -23,7 +23,7 @@
         <a href="${context.path}/docs/history/">History »</a>
       </li>
     </ul>
-    <h4>Other News</h4>
+    <h4>Blogs</h4>
     <ul>
         {% for post in site.categories.blog %}
         <li class="{% if page.title == post.title %}current{% endif %}">
