--- a/src/main/site/_includes/navigation.html
+++ b/src/main/site/_includes/navigation.html
@@ -9,7 +9,7 @@
     <a href="${context.path}/projects/">Projects</a>
   </li>
   <li class="{% if page.url contains '${context.path}/docs/' %}current{% endif %}">
-    <a href="${context.path}/docs/home/">Doc<span class="hide-on-mobiles">umentation</span><span class="show-on-mobiles">s</span></a>
+    <a href="${context.path}/docs/documentation/">Doc<span class="hide-on-mobiles">umentation</span><span class="show-on-mobiles">s</span></a>
   </li>
   <li class="{% if page.sample %}current{% endif %}">
     <a href="${context.path}/samples/">Samples</a>
