--- a/src/main/site/_includes/news_contents.html
+++ b/src/main/site/_includes/news_contents.html
@@ -3,13 +3,10 @@
     <h4>Overview</h4>
     <ul>
       <li class="{% if page.title == 'News' %}current{% endif %}">
-        <a href="${context.path}/news/">All News</a>
+        <a href="${context.path}/news/">All Posts</a>
       </li>
       <li class="{% if page.title == 'Releases' %}current{% endif %}">
         <a href="${context.path}/docs/history/">All Releases</a>
-      </li>
-      <li>
-        <a href="http://citrus.895196.n3.nabble.com/" target="_blank">Forum</a>
       </li>
     </ul>
     <h4>Posts</h4>
