Fix samples layout

--- a/src/main/site/_layouts/sample.html
+++ b/src/main/site/_layouts/sample.html
@@ -8,12 +8,12 @@ layout: samples
     <a href="{{ page.url }}" class="permalink" title="Permalink">∞</a>
   </h2>
   <div class="right">
-    {% if page.group != "none" %}
+    {% if page.group != "common" %}
     <a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ page.group }}/{{ page.name }}" target="_blank">
       <i class="fa fa-pencil"></i>&nbsp;View source code
     </a>
     {% endif %}
-    {% if page.group == "none" %}
+    {% if page.group == "common" %}
     <a href="https://github.com/citrusframework/citrus-samples/blob/master/{{ page.name }}" target="_blank">
       <i class="fa fa-pencil"></i>&nbsp;View source code
     </a>
