--- a/src/main/site/_includes/samples_contents.html
+++ b/src/main/site/_includes/samples_contents.html
@@ -15,7 +15,7 @@
     <h4>Samples</h4>
     <ul style="margin-top: 5px;">
       {% assign sorted_posts = site.categories.samples | sort: 'group' %}
-      {% assign group = "none" %}
+      {% assign group = "common" %}
 
       {% for post in sorted_posts %}
       {% if group != post.group %}
