chore: Improvements for mobile devices

--- a/src/main/site/_sass/_font-awesome.scss
+++ b/src/main/site/_sass/_font-awesome.scss
@@ -18,6 +18,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.fa-home:before {
+  content: "\f015";
+}
+
+.fa-help:before {
+  content: "\f059";
+}
+
 .fa-link:before {
   content: "\f0c1";
 }
