--- a/src/main/site/_includes/navigation.html
+++ b/src/main/site/_includes/navigation.html
@@ -1,9 +1,9 @@
 <ul>
-  <li>
-    <img src="/img/brand-logo.png" alt="Citrus"><span class="brand hide-on-mobiles">Citrus</span>
+  <li class="hide-on-mobiles">
+    <img src="/img/brand-logo.png" alt="Citrus"><span class="brand">Citrus</span>
   </li>
   <li class="{% if page.overview %}current{% endif %}">
-    <a href="/">Home</a>
+    <a href="/"><i class="fa fa-home"></i></a>
   </li>
   <li class="{% if page.url contains '/projects/' %}current{% endif %}">
     <a href="/projects/">Projects</a>
@@ -24,9 +24,9 @@
     <a href="/news/">News<span class="hide-on-mobiles"> &amp; Blog</span></a>
   </li>
   <li class="{% if page.url contains '/help/' %}current{% endif %}">
-    <a href="/help/">Help</a>
+    <a href="/help/"><span class="show-on-mobiles"><i class="fa fa-help"></i></span><span class="hide-on-mobiles">Help</span></a>
   </li>
-  <li>
-    <a href="{{ site.repository }}" target="_blank"><i class="fa fa-github"></i>&nbsp; GitHub</a>
+  <li class="hide-on-mobiles">
+    <a href="{{ site.repository }}" target="_blank"><i class="fa fa-github"></i>&nbsp;&nbsp;GitHub</a>
   </li>
 </ul>
