--- a/src/main/site/_includes/top.html
+++ b/src/main/site/_includes/top.html
@@ -8,12 +8,16 @@
   <meta name="description" content="Citrus Framework Website"/>
   <meta name="author" content="ConSol Software GmbH"/>
   {% feed_meta %}
-  <link rel="alternate" type="application/atom+xml" title="Recent commits to Citrus master branch" href="{{ site.repository }}/commits/master.atom">
+  <link rel="alternate" type="application/atom+xml" title="Recent commits to Citrus main branch" href="{{ site.repository }}/commits/main.atom">
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic,700,700italic,900">
   <link rel="stylesheet" href="/css/screen.css">
+  <link rel="stylesheet" href="/css/tabbed.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/styles/atom-one-light.min.css">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <!--[if lt IE 9]>
   <script src="/js/html5shiv.min.js"></script>
   <script src="/js/respond.min.js"></script>
   <![endif]-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+  <script src="/js/tabbed.js"></script>
 </head>
