--- a/src/main/site/_sass/_style.scss
+++ b/src/main/site/_sass/_style.scss
@@ -90,6 +90,8 @@ hr {
 
 .btn-release {
   color: #fff;
+  min-width: 14em;
+  margin-bottom: 3px;
   border-color: #33abde;
   background: #33abde;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -100,6 +102,10 @@ hr {
     color: #fff;
     border-color: #eff6fb;
     background-color: #0096D6;
+  }
+
+  i {
+    color: #fff;
   }
 }
 
